# GrabCut

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  main.cpp
maxflow/: CMakeLists.txt
segmentation/: CMakeLists.txt  GMM.cpp  GMM.h  segmentation.cpp  segmentation.hpp
